--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Coming soon...</h1>
-        <img src="Le_wagon.jpg" alt="">
+        <div id="container">
+            <h1>Coming soon...</h1>
+            <img id="image" src="Le_wagon.jpg" alt="">
+        </div>
+        
     </body>
 
 
